# cw32l010-pac

./: Cargo.toml  README.md  device.x  memory.x
.cargo/: config.toml
examples/: blinky.rs
src/: adc.rs  btim1.rs  gpioa.rs  gpiob.rs  lib.rs  lptim.rs  ram.rs  sysctrl.rs  uart1.rs  vc1.rs  vcdiv.rs
src/adc/: cr.rs  icr.rs  ier.rs  isr.rs  result4.rs  result5.rs  result6.rs  result7.rs  trigger.rs
src/atim/: af1.rs  af2.rs  cr2.rs  ier.rs
src/btim1/: ier.rs
src/flash/: cr2.rs  isr.rs
src/gpioa/: afrh.rs  afrl.rs  analog.rs  brr.rs  bsrr.rs  dir.rs  fallie.rs  filter.rs  icr.rs  idr.rs  isr.rs  odr.rs  opendrain.rs  pur.rs  riseie.rs  tog.rs
src/gpiob/: analog.rs  brr.rs  bsrr.rs  dir.rs  fallie.rs  filter.rs  icr.rs  idr.rs  isr.rs  odr.rs  opendrain.rs  pdr.rs  pur.rs  riseie.rs  tog.rs
src/gtim1/: cr2.rs  ier.rs
src/i2c1/: brr.rs  cr.rs
src/lptim/: cfgr.rs  cr.rs
src/ram/: addr.rs  icr.rs  ier.rs  isr.rs
src/rtc/: cr1.rs  date.rs
src/spi/: cr1.rs  cr2.rs
src/sysctrl/: ahben.rs  ahbrst.rs  apben1.rs  apben2.rs  apbrst1.rs  apbrst2.rs  cr1.rs  cr2.rs  debug.rs  hse.rs  icr.rs  ier.rs  isr.rs  resetflag.rs
src/uart1/: cr2.rs
src/vc1/: cr0.rs  cr1.rs  sr.rs
src/vcdiv/: div.rs
