[package]
name = "cw32l010_pac"
version = "0.1.0"
edition = "2024"
description = "Peripheral access crate for the CW32L010 microcontroller."
repository = "https://github.com/Lioyae/cw32l010-pac"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["cw32", "cw32l010", "pac", "embedded", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.6"
cortex-m-rt = { version = "0.7.5", optional = true }
vcell = "0.1.2"

[dev-dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
panic-halt = "1.0.0"
rtt-target = "0.6.1"

[features]
default = ["critical-section"]
rt = ["cortex-m-rt/device"]
